--- a/UserChat/WebContent/css/custom.css
+++ b/UserChat/WebContent/css/custom.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/earlyaccess/naumgothic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 @import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
@@ -31,4 +31,23 @@ tr td:last-child,
 tr th:last-child {
 	border-top-right-radius: 6px;
 	border-bottom-right-radius: 6px;
+}
+
+/* 모달 팝업창 관련 디자인 처리 */
+.vertical-alignment-helper {
+	display: table;
+	height: 100%;
+	width: 100%;
+	pointer-events: none;
+}
+.vertical-align-center {
+	display: table-cell;
+	vertical-align: middle;
+	pointer-events: none;
+}
+.modal-content {
+	width: inherit;
+	height: inherit;
+	margin: 0 auto;
+	pointer-events: all;
 }
