--- a/UserChat/WebContent/css/custom.css
+++ b/UserChat/WebContent/css/custom.css
@@ -191,3 +191,99 @@ height:40px;
 .text-red {
     color: #e74c3c;
 }                
+
+/* 전체 링크 관련 영역 */
+a {
+	color: #000;
+	text-decoration: none;	
+}
+a:hover {
+	color: #bbb;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+/* 네비게이션 영역 */
+.navbar-default {
+	/* 네비게이션 바 배경 색상 */
+	background-color: #006dcc;
+	border-color: #006dcc;
+	border-bottom-color: #ddd;
+	border-bottom-width: 3px;
+	border-radius: 0px;
+}
+.navbar-default .navbar-brand {
+	/* 네비게이션 제목 색상 */
+	color: #fff;
+	padding-top: 25px;
+	font-family: 'Hanna';
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+	/* 네비게이션 제목에 마우스를 올렸을 때 */
+	color: #ddd;
+	background-color: transparent;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+	/* 선택된 네비게이션 마우스 색상 이벤트 */
+	color: #fff;
+	background-color: #1456b8;
+}
+.navbar-default .navbar-nav > li > a {
+	/* 네비게이션 글자 기본 폰트 변경 */
+	color: white;
+	font-family: 'Noto Sans KR';
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+	/* 네비게이션 글자에 마우스를 올렸을 때 */
+	color: #ddd;
+} 
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+	/* 열린 드랍다운 마우스 색상 이벤트 */
+	color: #006dcc;
+	text-decoration: none;
+	background-color: #fff;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+	/* 토글에 마우스를 올렸을 때 */
+	background-color: #1456b8;
+} 
+.navbar-default .navbar-toggle .icon-bar {
+	/* 토글 아이콘 바 색상 */
+	background-color: #ddd;
+}
+@media (max-width: 767px) {
+	/* 작은 화면일 때 드랍다운 아이템에 마우스를 올렸을 때 */
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+		color: #fff;
+	}
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+		color: #eee;
+	}
+}
+/* 네비게이션 바 길이 수정 */
+.navbar-fixed-top {
+	min-height: 70px;
+}
+.navbar-nav > li > a {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	line-height: 70px;
+}
+@media (max-width: 767px) {
+	.navbar-default .navbar-brand {
+		padding-top: 15px;
+	}
+	.navbar-nav > li > a {
+		padding-top: 0px;
+		padding-bottom: 0px;
+		line-height: 40px;
+	}
+}
